Add liquibase and testContainers support
